--- a/_posts/2017-11-15-GIMMS.md
+++ b/_posts/2017-11-15-GIMMS.md
@@ -1,7 +1,9 @@
+```
 ---
 layout: post
 title: The Problems With GIMMSv3.0g
-tags: [Drylands, TSS-RESTREND, GIMMS]
+tags: [Drylands, TSS-RESTREND, GIMMS] 
 ---
+```
 
-To be written. 
+### To be written. 
